--- a/public/index.html
+++ b/public/index.html
@@ -11,29 +11,66 @@
 
 <body>
     <div id="app">
-        <section class="hero is-primary is-bold is-fullheight">
-            <div class="hero-head">
-                <nav class="navbar">
-                    <div class="container">
-                        <div class="navbar-brand">
-                            <router-link class="navbar-item" to="/">
-                                <img src="/logo.png" alt="Logo">
-                            </router-link>
-                        </div>
-                        <div class="navbar-menu">
-                            <div class="navbar-end">
-
+        <div class="background">
+            <section class="hero is-fullheight">
+                <div class="hero-head">
+                    <nav class="navbar">
+                        <div class="container">
+                            <div class="navbar-brand">
+                                <router-link class="navbar-item" to="/">
+                                    <img src="/img/logoLM_wbg.png" alt="Last Mohicans">
+                                </router-link>
+                            </div>
+                            <div class="navbar-menu">
+                                <div class="navbar-end">
+                                    <span class="navbar-item">
+                                        <a class="button is-info is-outlined" href="https://www.facebook.com/lastmohicansteam/" target="_blank">
+                                            <span class="icon">
+                                                <i class="zmdi zmdi-facebook"></i>
+                                            </span>
+                                            <span>/lastmohicansteam</span>
+                                        </a>
+                                    </span>
+                                    <span class="navbar-item">
+                                        <a class="button is-info" href="https://twitter.com/last__mohicans" target="_blank">
+                                            <span class="icon">
+                                                <i class="zmdi zmdi-twitter"></i>
+                                            </span>
+                                            <span>@last__mohicans</span>
+                                        </a>
+                                    </span>
+                                </div>
                             </div>
                         </div>
+                    </nav>
+                </div>
+                <div class="hero-body">
+                    <div class="container">
+                        <router-view></router-view>
                     </div>
-                </nav>
-            </div>
-            <div class="hero-body">
-                <div class="container">
-                    <router-view></router-view>
+                </div>
+            </section>
+        </div>
+
+        <footer class="footer">
+            <div class="container">
+                <div class="content has-text-centered">
+                    <p>
+                        <strong>Last-Mohicans Team</strong> by
+                        <a href="#">
+                            a bunch of gamers
+                            <i class="zmdi zmdi-gamepad"></i>
+                        </a>
+                    </p>
+                    <p>
+                        <a href="https://github.com/mydnic/last-mohicans">
+                            <i class="zmdi zmdi-github"></i>
+                            Améliorer ce site
+                        </a>
+                    </p>
                 </div>
             </div>
-        </section>
+        </footer>
 
     </div>
     <script src="/js/app.js"></script>
