add facebook banner

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>=Last-Mohicans= Team</title>
+
+    <meta name="description" content="The Last-Mohicans Team">
+    <meta name="keywords" content="team,gaming,last mohicans,teamspeak,discord">
+    <meta name="author" content="Mydnic">
+    <meta property="og:title" content="Last-Mohicans.net" />
+    <meta property="og:url" content="https://last-mohicans.net/" />
+    <meta property="og:image" content="https://last-mohicans.net/img/fb_banner.png" />
+    <meta property="og:site_name" content="Last-Mohicans.net" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="The Last-Mohicans Team">
+
     <link href="//cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css" rel="stylesheet">
     <link href="/css/app.css" rel="stylesheet">
 </head>
