improve logo and icon

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>=Last-Mohicans= Team</title>
 
+    <link rel="icon" href="/img/icon.png" type="image/png" />
+
     <meta name="description" content="The Last-Mohicans Team">
     <meta name="keywords" content="team,gaming,last mohicans,teamspeak,discord">
     <meta name="author" content="Mydnic">
@@ -29,7 +31,8 @@
                         <div class="container">
                             <div class="navbar-brand">
                                 <router-link class="navbar-item" to="/">
-                                    <img src="/img/logoLM_wbg.png" alt="Last Mohicans">
+                                    <img src="/img/logo/icon.png" alt="Last Mohicans">
+                                    <img src="/img/logo/text.png" alt="Last Mohicans" class="logo-text">
                                 </router-link>
                             </div>
                             <div class="navbar-menu">
